@@ -1,5 +1,10 @@
 2002-07-23  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
+	* functions.c: Moved PDFCAUCHY(), PDFLANDAU(), PDFLOGISTIC(),
+	PDFPARETO() to fn-stat.
+	
+2002-07-23  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
 	* functions.c: Moved PDFBERNOULLI() to fn-stat (renamed to
 	BERNOULLI()). Removed PDFGAMMA() and PDFEXP().
 
